[package]
name = "atomic-write-file"
version = "0.3.0"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"

description = "Write files atomically to a file system"
repository = "https://github.com/andreacorbellini/rust-atomic-write-file"

keywords = ["file", "atomic", "write"]
categories = ["filesystem"]

[dependencies]
rand = { version = "0.9.2" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "user"] }

[features]
default = []

unnamed-tmpfile = []

unstable-can_vector = []
unstable-read_buf = []
unstable-seek_stream_len = []
unstable-unix_file_vectored_at = []
unstable-write_all_vectored = []
